--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>index</title>
+  <title>index 20250807 1021</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="card" style="width: 18rem">
       <img src="../assets/images/dog.jpg" class="card-img-top" alt="cat" />
       <div class="card-body">
-        <h5 class="card-title">20250806 1038</h5>
+        <h5 class="card-title">123</h5>
         <p class="card-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, odit, iusto odio assumenda alias id
           nobis earum!
