--- a/pages/about.html
+++ b/pages/about.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>about</title>
+  <title></title>
 </head>
 
 <body>
   <%- include('./layout/header'); -%>
-    <h1>我是about</h1>
-  <%- include('./layout/footer'); -%>
-  
-
-  <script type="module" src="../main.js"></script>
+    <main class="container">
+      <h1>關於羊蹄</h1>
+    </main>
+    <%- include('./layout/footer'); -%>
+      <script type="module" src="../main.js"></script>
+      <%- include('./layout/title'); -%>
 </body>
 
 </html>
