--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -10,9 +10,8 @@
 
 <body>
   <%- include('./layout/header'); -%>
-
     <main class="container">
-      <h1>線上商店</h1>
+      <h1>產品詳情頁</h1>
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
