--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title>202509180133 test</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
-      <%- include('./layout/title'); -%>
+       
 </body>
 
 </html>
