--- a/pages/index.html
+++ b/pages/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>202509180133 test</title>
+  <title>202509180144</title>
 </head>
 
 <body>
   <%- include('./layout/header'); -%>
     <main class="container">
       <h1>首頁</h1>
-
+      <img src="../assets/images/dog.jpg" alt="testdog">
       <button class="text-primary-50 bg-primary-800 border-radius-xl">逛逛商店</button>
     </main>
     <%- include('./layout/footer'); -%>
