--- a/pages/products.html
+++ b/pages/products.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+  <%- include('./layout/style'); -%>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
-      <%- include('./layout/title'); -%>
+    <%- include('./layout/js'); -%>
 </body>
 
 </html>
