--- a/pages/explore.html
+++ b/pages/explore.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>20250819 1645</title>
+  <title></title>
+  <%- include('./layout/style'); -%>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
-      <%- include('./layout/title'); -%>
+      <%- include('./layout/js'); -%>
 </body>
 
 </html>
