--- a/pages/index.html
+++ b/pages/index.html
@@ -11,14 +11,14 @@
 
 <body>
   <%- include('./layout/header'); -%>
-    <main class="container">
+    <main class="container ChenYuluoyan">
       <h1>首頁</h1>
 
       <button class="text-primary-50 bg-primary-800 border-radius-xl">逛逛商店</button>
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
-       <%- include('./layout/js'); -%>
+      <%- include('./layout/js'); -%>
 </body>
 
 </html>
