Co-authored-by: xaweiouo <xaweiouo@users.noreply.github.com>

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <%- include('./layout/header'); -%>
-    <main class="container ChenYuluoyan">
-      <h1>首頁</h1>
+    <main class="container">
+      <h1 class="ChenYuluoyan">首頁</h1>
 
       <button class="text-primary-50 bg-primary-800 border-radius-xl">逛逛商店</button>
     </main>
