--- a/pages/explore.html
+++ b/pages/explore.html
@@ -12,7 +12,9 @@
 <body>
   <%- include('./layout/header'); -%>
     <main class="container">
-      <h1>探索羊蹄</h1>
+      <h1 class="cy2">
+        「辰宇落雁體」是我與韋辰在學校的自主學習計畫，由韋辰負責書寫，我進行後製而成。手寫字型就像是我們將字詞複寫於紙上，讓字跡留下，以這種近似雋永的形式封裝，使被複寫的日常沒有保存期限，也像是一種永恆的召喚，在任何無法抵達的以後，都能為...
+      </h1>
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
