--- a/pages/explore.html
+++ b/pages/explore.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
   <%- include('./layout/style'); -%>
-</head>
-
+</head> 
 <body>
   <%- include('./layout/header'); -%>
-    <main class="container">
-      <h1 class="cy2">
-        「辰宇落雁體」是我與韋辰在學校的自主學習計畫，由韋辰負責書寫，我進行後製而成。手寫字型就像是我們將字詞複寫於紙上，讓字跡留下，以這種近似雋永的形式封裝，使被複寫的日常沒有保存期限，也像是一種永恆的召喚，在任何無法抵達的以後，都能為...
-      </h1>
+    <main>
+      <section class="explore">
+
+
+
+        <div class="start">
+          <h1 class="h1 text-primary-50 mb-24">
+            找尋屬於我的咖啡風味
+          </h1>
+          <p class="text-primary-50 mb-24">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
+          <p class="text-primary-50">我們將會帶領您探索屬於您的咖啡</p>
+        </div>
+
+
+
+      </section>
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
