--- a/pages/products.html
+++ b/pages/products.html
@@ -22,7 +22,7 @@
           <div class="card rounded-0 border-0">
             <!-- 商品照底色 -->
             <div class="w-100 ratio ratio-1x1 position-relative bg-primary-50">
-              <img src="/assets/images/dog.jpg" class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle" alt="...">
+              <img src="/assets/images/whiteCoffeeCup.png" class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle" alt="...">
             </div>
             <div class="card-body text-center py-20">
               <h5 class="card-title label-xsmall text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
