--- a/pages/index.html
+++ b/pages/index.html
@@ -20,13 +20,22 @@
               <h1 class="heading-header-title text-primary-50 mb-24">步步踏實尋好豆</h1>
               <p class="paragraph-xxlarge text-primary-50 mb-12">從產地到杯中</p>
               <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee  為你萃取每一口的獨特與真誠</p>
-              <a href="products.html" class="btn text-primary-950 bg-primary-50 paragraph-large">逛逛商店</a>
+              <a href="products.html" class="btn paragraph-large">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
               <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z" fill="#f7f6ef"/></svg>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="/assets/images/index/banner2.png" class="d-block w-100" alt="banner2">
+          <div class="carousel-item header2">
+            <div class="text-center header2-text d-flex flex-column">
+              <div class="vertical-line3 mb-40"></div>
+              <p class="heading-header-title text-primary-50 mb-24 mb-8">限時折扣</p>
+              <p class="heading-header-title text-primary-50 mb-24">全店滿千折百</p>
+              <p class="paragraph-xxlarge text-primary-50 mb-12">現在下單滿 NT$1,000 現折 NT$100</p>
+              <p class="paragraph-xxlarge text-primary-50 mb-40">把喜歡的風味一次帶回家！</p>
+              <a href="products.html" class="btn paragraph-large">逛逛商店</a>
+              <div class="vertical-line2 mt-40 mb-12"></div>
+              <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z" fill="#f7f6ef"/></svg>
+            </div>
           </div>
         </div>
       </div>
