--- a/pages/explore.html
+++ b/pages/explore.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
   <%- include('./layout/style'); -%>
-</head> 
+</head>
+
 <body>
   <%- include('./layout/header'); -%>
-    <main>
-      <section class="explore">
+    <main class="explore">
 
-
-
-        <div class="start">
-          <h1 class="h1 text-primary-50 mb-24">
-            找尋屬於我的咖啡風味
-          </h1>
-          <p class="text-primary-50 mb-24">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
-          <p class="text-primary-50">我們將會帶領您探索屬於您的咖啡</p>
-        </div>
-
-
-
+      <section class="start">
+        <h1 class="h1 text-primary-50 mb-24">
+          找尋屬於我的咖啡風味
+        </h1>
+        <p class="text-primary-50 mb-24">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
+        <p class="text-primary-50">我們將會帶領您探索屬於您的咖啡</p>
       </section>
+
+      
+
+
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
