--- a/pages/about.html
+++ b/pages/about.html
@@ -5,15 +5,45 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title>關於羊蹄</title>
   <%- include('./layout/style'); -%>
 </head>
 
 <body>
   <%- include('./layout/header'); -%>
-    <main class="container">
-      <h1>關於羊蹄</h1>
+
+    <main class="">
+      <div class="about-1">
+        <div class="text-primary-50 about-position about-bg-color">
+          <h1 class="heading-header-title mb-24">關於羊蹄</h1>
+          <h5 class="heading-small">About Sheepo Coffee</h5>
+        </div>
+      </div>
+
+      <div class="about-2">
+        <div class="about-position text-primary-950">
+          <div class="d-flex mb-56">
+            <h2 class="heading-xlarge">品牌故事</h2>
+            <p class="horizontal"></p>
+          </div>
+          <h3 class="paragraph-medium mb-40">Sheepo Coffee 羊蹄咖啡</h3>
+          <p>取​名源自於​咖​啡豆​的​故事​</p>
+          <p>傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​不​知道​為何​特別​有​精神</p>
+          <p class="mb-40">走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這指​的​正是​咖啡​漿果。​</p>
+          <p>​取羊蹄​為名，​就​是​要​特別​強調步步​踏實​的​精神。​</p>
+          <p>與​獨立尋豆師​合作，​持續​的​找尋​獨具​特色​的​咖啡​生豆。​</p>
+          <p class="mb-56">從​烘焙​到​沖煮，​皆​是​我​們親​自生​產​與​測試，​為​的​就​是​建立​品質​的​一​致性。​</p>
+          <p class="Paragraph/Medium text-primary-500">「我​們​不​想​只​賣​咖啡，​我​想​賣​一​種值得​信賴​的​味道。」​</p>
+
+
+
+
+        </div>
+      </div>
+
     </main>
+
+    
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
