練習滾動失敗

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,17 +12,22 @@
 <body>
   <%- include('./layout/header'); -%>
     <main class="index">
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div id="carouselExampleFade" class="banner carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item header1 active">
             <div class="text-center header1-text d-flex flex-column">
               <div class="vertical-line1 mb-40"></div>
               <h1 class="heading-header-title text-primary-50 mb-24">步步踏實尋好豆</h1>
               <p class="paragraph-xxlarge text-primary-50 mb-12">從產地到杯中</p>
-              <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee  為你萃取每一口的獨特與真誠</p>
+              <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee 為你萃取每一口的獨特與真誠</p>
               <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
-              <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z" fill="#f7f6ef"/></svg>
+              <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z"
+                  fill="#f7f6ef" />
+              </svg>
             </div>
           </div>
           <div class="carousel-item header2">
@@ -34,13 +39,37 @@
               <p class="paragraph-xxlarge text-primary-50 mb-40">把喜歡的風味一次帶回家！</p>
               <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
-              <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z" fill="#f7f6ef"/></svg>
+              <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17ZM7.47 9.97a.75.75 0 0 1 1.06 0L12 13.44l3.47-3.47a.75.75 0 1 1 1.06 1.06l-4 4a.75.75 0 0 1-1.06 0l-4-4a.75.75 0 0 1 0-1.06Z"
+                  fill="#f7f6ef" />
+              </svg>
             </div>
           </div>
         </div>
       </div>
+      <div class="container moon">
+        <div class="row">
+          <div class="col-4">
+            <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
+            <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
+            <div class="d-flex mb-auto">
+              <p class="label-large font-weight-bold ls-2">Moon Festival Special</p>
+            </div>
+            <p class="paragraph-medium primary-700 ls-2 mb-8">這個中秋不只賞月，也要賞味</p>
+            <p class="paragraph-medium primary-700 ls-2 mb-8">送出一份不一樣的團圓滋味</p>
+            <p class="paragraph-medium primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
+            <p class="paragraph-medium primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
+            <p class="paragraph-medium primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
+            <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+          </div>
+          <div class="col-8"></div>
+        </div>
+      </div>
     </main>
     <%- include('./layout/footer'); -%>
+
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
 </body>
