--- a/pages/index.html
+++ b/pages/index.html
@@ -51,20 +51,31 @@
       </div>
       <div class="container moon">
         <div class="row">
-          <div class="col-4">
-            <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
-            <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
-            <div class="d-flex mb-auto">
-              <p class="label-large font-weight-bold ls-2">Moon Festival Special</p>
+          <div class="col-4 d-flex flex-column justify-content-between">
+            <div class="top">
+              <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
+              <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
+              <div class="d-flex mb-auto align-items-center">
+                <p class="label-large font-weight-bold ls-2 me-20 mb-0">Moon Festival Special</p>
+                <div class="horizontal-line"></div>
+              </div>
             </div>
-            <p class="paragraph-medium primary-700 ls-2 mb-8">這個中秋不只賞月，也要賞味</p>
-            <p class="paragraph-medium primary-700 ls-2 mb-8">送出一份不一樣的團圓滋味</p>
-            <p class="paragraph-medium primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
-            <p class="paragraph-medium primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
-            <p class="paragraph-medium primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
-            <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+            <div class="bottom">
+              <p class="paragraph-medium text-primary-700 ls-2 mb-8">這個中秋不只賞月，也要賞味</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-8">送出一份不一樣的團圓滋味</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
+              <a href="products.html" class="btn2 paragraph-medium ls-2">查看商品</a>
+            </div>
           </div>
-          <div class="col-8"></div>
+          <div class="col-8 d-flex align-items-end">
+            <div class="left me-24">
+              <p class="mb-4 paragraph-small text-primary-950">最暖的中秋禮，是一杯為你準備的好咖啡</p>
+              <p class="mb-4 paragraph-small text-primary-950">限定濾掛禮盒，送給最想念的那個人。</p>
+            </div>
+            <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
+          </div>
         </div>
       </div>
     </main>
