--- a/pages/index.html
+++ b/pages/index.html
@@ -66,7 +66,7 @@
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
-              <a href="products.html" class="btn2 paragraph-medium ls-2">查看商品</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
           <div class="col-8 d-flex align-items-end">
