更新共用按鈕 20250905 1256

--- a/pages/demo.html
+++ b/pages/demo.html
@@ -52,6 +52,13 @@
         <div>
             請參考 https://getbootstrap.com/docs/5.3/utilities/borders/
         </div>
+
+
+        <!-- button -->
+         <h3>5.Button 直接套用../assets/scss/customize/_button.scss</h3>
+         <dii>
+            <button class="btn1">class="btn1"</button>  <button class="btn2">class="btn2"</button>
+         </dii>
     </div>
     <script type="module" src="../main.js"></script>
     <%- include('./layout/js'); -%>
