--- a/pages/index.html
+++ b/pages/index.html
@@ -50,8 +50,8 @@
         </div>
       </div>
       <div class="container moon">
-        <div class="row">
-          <div class="col-4 d-flex flex-column justify-content-between">
+        <div class="row d-flex align-items-end">
+          <div class="vh-90 col-4 d-flex flex-column justify-content-between">
             <div class="top">
               <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
               <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
@@ -69,12 +69,18 @@
               <a href="products.html" class="btn2 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
-          <div class="col-8 d-flex align-items-end">
-            <div class="left me-24">
-              <p class="mb-4 paragraph-small text-primary-950">最暖的中秋禮，是一杯為你準備的好咖啡</p>
-              <p class="mb-4 paragraph-small text-primary-950">限定濾掛禮盒，送給最想念的那個人。</p>
+          <div class="col-8">
+            <div class="row d-flex align-items-end">
+              <div class="col-4 d-flex flex-row-reverse">
+                <div class="d-flex flex-column">
+                  <span class="mb-4 paragraph-small text-primary-950">最暖的中秋禮，是一杯為你準備的好咖啡</span>
+                  <span class="paragraph-small text-primary-950">限定濾掛禮盒，送給最想念的那個人。</span>
+                </div>
+              </div>
+              <div class="col-8">
+                <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
+              </div>
             </div>
-            <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
           </div>
         </div>
       </div>
