--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-BMKLbWlo.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-D8HWsBOc.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DM1au6oF.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-Be-H68wS.css">
   </head>
 
 <body>
@@ -148,7 +148,7 @@
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
-              <a href="products.html" class="btn2 paragraph-medium ls-2">查看商品</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
           <div class="col-8 d-flex align-items-end">
