--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>demo</title>
-      <script type="module" crossorigin src="/coffee/assets/main-BMKLbWlo.js"></script>
-      <link rel="stylesheet" crossorigin href="/coffee/assets/main-D8HWsBOc.css">
+      <script type="module" crossorigin src="/coffee/assets/main-DM1au6oF.js"></script>
+      <link rel="stylesheet" crossorigin href="/coffee/assets/main-Be-H68wS.css">
     </head>
 
 <body>
@@ -53,6 +53,13 @@
         <div>
             請參考 https://getbootstrap.com/docs/5.3/utilities/borders/
         </div>
+
+
+        <!-- button -->
+         <h3>5.Button 直接套用../assets/scss/customize/_button.scss</h3>
+         <dii>
+            <button class="btn1">class="btn1"</button>  <button class="btn2">class="btn2"</button>
+         </dii>
     </div>
     <script>
     let pagetilte = "羊蹄咖啡";
