--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
               <h1 class="heading-header-title text-primary-50 mb-24">步步踏實尋好豆</h1>
               <p class="paragraph-xxlarge text-primary-50 mb-12">從產地到杯中</p>
               <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee 為你萃取每一口的獨特與真誠</p>
-              <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
               <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +37,7 @@
               <p class="heading-header-title text-primary-50 mb-24">全店滿千折百</p>
               <p class="paragraph-xxlarge text-primary-50 mb-12">現在下單滿 NT$1,000 現折 NT$100</p>
               <p class="paragraph-xxlarge text-primary-50 mb-40">把喜歡的風味一次帶回家！</p>
-              <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
               <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +66,7 @@
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
-              <a href="products.html" class="btn2 paragraph-medium ls-2 d-inline-block">查看商品</a>
+              <a href="products.html" class="btn1 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
           <div class="col-8 d-flex align-items-end">
