--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-DM1au6oF.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-Be-H68wS.css">
+    <script type="module" crossorigin src="/coffee/assets/main-C4SbxWDA.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CWfE4iaA.css">
   </head>
 
 <body>
@@ -102,7 +102,7 @@
               <h1 class="heading-header-title text-primary-50 mb-24">步步踏實尋好豆</h1>
               <p class="paragraph-xxlarge text-primary-50 mb-12">從產地到杯中</p>
               <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee 為你萃取每一口的獨特與真誠</p>
-              <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
               <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +119,7 @@
               <p class="heading-header-title text-primary-50 mb-24">全店滿千折百</p>
               <p class="paragraph-xxlarge text-primary-50 mb-12">現在下單滿 NT$1,000 現折 NT$100</p>
               <p class="paragraph-xxlarge text-primary-50 mb-40">把喜歡的風味一次帶回家！</p>
-              <a href="products.html" class="btn paragraph-medium ls-2">逛逛商店</a>
+              <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
               <div class="vertical-line2 mt-40 mb-12"></div>
               <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
@@ -148,7 +148,7 @@
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
               <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
-              <a href="products.html" class="btn2 paragraph-medium ls-2 d-inline-block">查看商品</a>
+              <a href="products.html" class="btn1 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
           <div class="col-8 d-flex align-items-end">
