--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
             <div class="top">
               <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
               <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
-              <div class="d-flex mb-auto align-items-center">
+              <div class="d-flex align-items-center">
                 <p class="label-large font-weight-bold ls-2 me-20 mb-0">Moon Festival Special</p>
                 <div class="horizontal-line"></div>
               </div>
@@ -73,14 +73,32 @@
             <div class="row d-flex align-items-end">
               <div class="col-4 d-flex flex-row-reverse">
                 <div class="d-flex flex-column">
-                  <span class="mb-4 paragraph-small text-primary-950">最暖的中秋禮，是一杯為你準備的好咖啡</span>
-                  <span class="paragraph-small text-primary-950">限定濾掛禮盒，送給最想念的那個人。</span>
+                  <span class="mb-4 paragraph-small text-primary-950 ls-2">最暖的中秋禮，</span>
+                  <span class="mb-4 paragraph-small text-primary-950 ls-2">是一杯為你準備的好咖啡</span>
+                  <span class="mb-4 paragraph-small text-primary-950 ls-2">限定濾掛禮盒，</span>
+                  <span class="paragraph-small text-primary-950 ls-2">送給最想念的那個人。</span>
                 </div>
               </div>
               <div class="col-8">
                 <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container py-120">
+        <div class="new mb-64">
+          <p class="heading-small ls-2 text-accent-300 mb-12">NEW</p>
+          <div class="title d-flex align-items-center mb-40">
+            <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">本月新品</p>
+            <div class="horizontal-line2"></div>
+          </div>
+        </div>
+        <div class="new">
+          <p class="heading-small ls-2 text-accent-300 mb-12">NEW</p>
+          <div class="title d-flex align-items-center mb-40">
+            <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">熱銷品項</p>
+            <div class="horizontal-line2"></div>
           </div>
         </div>
       </div>
