探索風味ad完成

--- a/pages/index.html
+++ b/pages/index.html
@@ -102,6 +102,18 @@
           </div>
         </div>
       </div>
+      <div class="explore-ad">
+        <div class="container explore-ad-text py-82">
+          <p class="heading-xxxlarge mb-20 text-grey-0">找尋</p>
+          <p class="heading-xxxlarge mb-20 text-grey-0">屬於我的咖啡風味</p>
+          <div class="horizontal-line3"></div>
+          <p class="paragraph-xlarge text-grey-0 my-20 ls-2">風味太多選不出來？我們將會帶領您探索屬於您的風味咖啡</p>
+          <a href="explore.html" class="btn2 paragraph-medium ls-2 d-inline-block">探索去</a>
+        </div>
+      </div>
+      <div class="py-120">
+        
+      </div>
     </main>
     <%- include('./layout/footer'); -%>
 
