--- a/pages/index.html
+++ b/pages/index.html
@@ -112,6 +112,10 @@
         </div>
       </div>
       <div class="py-120">
+        <div class="text-center mb-64">
+          <p class="heading-small ls-2 text-accent-300 mb-12">FEEDBACK</p>
+          <p class="heading-xxlarge ls-2 text-primary-950">顧客好評</p>
+        </div>
         
       </div>
     </main>
