--- a/pages/explore.html
+++ b/pages/explore.html
@@ -13,13 +13,12 @@
   <%- include('./layout/header'); -%>
     <main class="explore">
 
-
       <!-- 找尋屬於我的咖啡風味 -->
       <section>
-        <div class="start">
+        <div class="content bg1">
           <h1 class="h1 text-primary-50 mb-16 mb-md-24">
             找尋屬於我的咖啡風味
-          </h1>          
+          </h1>
           <!-- https://getbootstrap.com/docs/5.3/utilities/display/ -->
           <!-- 768以下顯示 -->
           <div class="d-none d-sm-block d-md-none">
@@ -32,12 +31,201 @@
             <p class="text-primary-50 mb-12">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
             <p class="text-primary-50 mb-40">我們將會帶領您探索屬於您的咖啡</p>
           </div>
-          <button class="btn2">啟程探索風味</button>
+          <div class="text-center">
+            <button class="btn2">啟程探索風味</button>
+          </div>
         </div>
       </section>
+      <!-- 找尋屬於我的咖啡風味 end -->
 
+      <!-- ############################### -->
 
+      <!-- 三條岔路 -->
+      <section>
+        <div class="content bg2">
+          <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+            在前往羊蹄茶會的路上，您遇到了三條岔路您決定往哪一條前進?
+          </h2>
 
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad1.png"
+                  alt="帶有酸甜花果香味的道路" />
+                <p class="text-primary-950 p-8 p-md-16">帶有酸甜花果香味的道路</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad2.png"
+                  alt="溫和堅果巧克力味的道路" />
+                <p class="text-primary-950 p-8 p-md-16">溫和堅果巧克力味的道路</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-threeroad3.png"
+                  alt="濃郁草本優雅香氣的道路" />
+                <p class="text-primary-950 p-8 p-md-16">濃郁草本優雅香氣的道路</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-start">
+            <button class="btn3">優雅回頭</button>
+          </div>
+        </div>
+      </section>
+      <!-- 三條岔路 end -->
+
+      <!-- ############################### -->
+
+      <!-- 帶有酸甜花果香味的道路 -->
+      <section>
+        <div class="content bg3">
+          <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+            終於抵達羊蹄茶會現場了，我們佈置了各種茶點提供給您享用，您想先享用什麼點心呢?
+          </h2>
+
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="柑橘磅蛋糕" />
+                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="法式芒果軟糖" />
+                <p class="text-primary-950 p-8 p-md-16">法式芒果軟糖</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="黑醋栗奶油蛋糕" />
+                <p class="text-primary-950 p-8 p-md-16">黑醋栗奶油蛋糕</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-start">
+            <button class="btn3">優雅回頭</button>
+          </div>
+        </div>
+      </section>
+      <!-- 帶有酸甜花果香味的道路 end -->
+
+      <!--  接著享用時麼點心呢 -->
+      <section>
+        <div class="content bg3">
+          <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+            接著享用時麼點心呢?
+          </h2>
+
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="白桃果凍" />
+                <p class="text-primary-950 p-8 p-md-16">白桃果凍</p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜杯子蛋糕" />
+                <p class="text-primary-950 p-8 p-md-16">蜂蜜杯子蛋糕</p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="text-start">
+            <button class="btn3">優雅回頭</button>
+          </div>
+        </div>
+      </section>
+      <!-- 接著享用時麼點心呢 end -->
+
+      <!-- 溫和堅果巧克力味的道路 -->
+      <section>
+        <div class="content bg3">
+          <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+            終於抵達羊蹄茶會現場了，我們佈置了各種茶點提供給您享用，您想先享用什麼點心呢?
+          </h2>
+
+          <div class="row">
+            <div class="col-12 col-md-3">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
+                <p class="text-primary-950 p-8 p-md-16">李子核桃塔</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
+                <p class="text-primary-950 p-8 p-md-16">萊姆夾心餅乾</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
+                <p class="text-primary-950 p-8 p-md-16">櫻桃核果磅蛋糕</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-4.png" alt="柑橘磅蛋糕" />
+                <p class="text-primary-950 p-8 p-md-16">柑橘磅蛋糕</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-start">
+            <button class="btn3">優雅回頭</button>
+          </div>
+        </div>
+      </section>
+      <!-- 溫和堅果巧克力味的道路 end -->
+
+      <!-- 濃郁草本優雅香氣的道路 -->
+      <section>
+        <div class="content bg3">
+          <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+            終於抵達羊蹄茶會現場了，我們佈置了各種茶點提供給您享用，您想先享用什麼點心呢?
+          </h2>
+
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-1.png" alt="黑糖榛果塔" />
+                <p class="text-primary-950 p-8 p-md-16">黑糖榛果塔</p>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6">
+              <div class="ecard rounded">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png" alt="蜂蜜紅茶餅乾" />
+                <p class="text-primary-950 p-8 p-md-16">蜂蜜紅茶餅乾</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-start">
+            <button class="btn3">優雅回頭</button>
+          </div>
+        </div>
+      </section>
+      <!-- 濃郁草本優雅香氣的道路 end -->
+
+      <!-- ############################### -->
+
+      
 
     </main>
     <%- include('./layout/footer'); -%>
