更新 找尋屬於我的咖啡風味

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -21,13 +21,13 @@
           </h1>
           <!-- https://getbootstrap.com/docs/5.3/utilities/display/ -->
           <!-- 768以下顯示 -->
-          <div class="d-none d-sm-block d-md-none">
+          <div class="d-block d-sm-none">
             <p class="text-primary-50 mb-4">親愛的貴賓</p>
             <p class="text-primary-50 mb-4">很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
             <p class="text-primary-50 mb-24">我們將會帶領您探索屬於您的咖啡</p>
           </div>
           <!-- 768以上顯示 -->
-          <div class="d-none d-md-block">
+          <div class="d-none d-sm-block">
             <p class="text-primary-50 mb-12">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
             <p class="text-primary-50 mb-40">我們將會帶領您探索屬於您的咖啡</p>
           </div>
