--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" href="/assets/fonts/Poppins-Regular.woff2" crossorigin="anonymous" fetchpriority="high" />
   <%- include('./layout/style'); -%>
 </head>
 
@@ -73,7 +74,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -112,7 +113,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -142,7 +143,7 @@
 
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -186,7 +187,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -216,7 +217,7 @@
             </div>
           </div>
 
-          <div class="text-start">
+          <div class="text-start text-md-center">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
