--- a/pages/explore.html
+++ b/pages/explore.html
@@ -74,7 +74,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -125,6 +125,7 @@
         <div class="content bg3">
           <h2 class="h2 text-primary-50 mb-16 mb-md-40">
             接著享用時麼點心呢?
+            
           </h2>
 
           <div class="row">
@@ -143,7 +144,7 @@
 
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -187,7 +188,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -217,7 +218,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
