--- a/explore.html
+++ b/explore.html
@@ -156,7 +156,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -195,7 +195,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -207,6 +207,7 @@
         <div class="content bg3">
           <h2 class="h2 text-primary-50 mb-16 mb-md-40">
             接著享用時麼點心呢?
+            
           </h2>
 
           <div class="row">
@@ -225,7 +226,7 @@
 
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -269,7 +270,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
@@ -299,7 +300,7 @@
             </div>
           </div>
 
-          <div class="text-start text-md-center">
+          <div class="text-center text-md-start">
             <button class="btn3">優雅回頭</button>
           </div>
         </div>
