字體載入優化測試

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" href="/assets/fonts/Poppins-Regular.woff2" crossorigin="anonymous" fetchpriority="high" />
+  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous" fetchpriority="high" />
   <%- include('./layout/style'); -%>
 </head>
 
@@ -125,7 +125,7 @@
         <div class="content bg3">
           <h2 class="h2 text-primary-50 mb-16 mb-md-40">
             接著享用時麼點心呢?
-            
+
           </h2>
 
           <div class="row">
