--- a/pages/products.html
+++ b/pages/products.html
@@ -22,7 +22,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item header1 active">
-            <div class="container">
+            <div class="container my-50">
               <div class="d-flex align-items-center mb-24">
                 <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
                 <div class="horizontal-line me-16"></div>
@@ -32,8 +32,16 @@
               <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
             </div>
           </div>
-          <div class="carousel-item">
-            
+          <div class="carousel-item header2">
+            <div class="container">
+              <div class="d-flex align-items-center mb-24">
+                <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
+                <div class="horizontal-line me-16"></div>
+                <span class="heading-xxxlarge text-primary-50 mb-0">全店滿千折百</span>
+              </div>
+              <p class="paragraph-xxlarge mb-4 text-primary-50">現在下單滿 NT$1,000 現折 NT$100</p>
+              <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
+            </div>
           </div>
         </div>
       </div>
