--- a/pages/about.html
+++ b/pages/about.html
@@ -86,13 +86,11 @@
             <img src="/assets/images/index/about-2.png" alt="" />
           </div>
 
-          </div>
+        </div>
 
 
 
       <div class="container">
-
-
           <!-- Business Cooperation -->
           <div class="row book">
             <div class="booking-left pe-40 col-md-6">
@@ -137,13 +135,86 @@
 
 
     <!-- FAQ -->
-      <div>
-        <div class="service">
-          <div class="text-center service-title">
-            <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
-            <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
+      <div class="faq">
+
+        <div class="text-center service-title">
+          <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
+          <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
+
+          
+        </div>
+
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                工作室開放內用嗎？
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                由於工作室內空間有限，目前暫無開放內用服務。
+              </div>
+            </div>
           </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                可以取消訂單嗎?
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                很抱歉，已下訂的訂單無法取消。
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                可以選擇什麼送貨方式？
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                工作室提供 7-11 店到店以及郵局包裹寄送服務
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                接受哪些付款方式？
+              </button>
+            </h2>
+            <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                我們接受以下付款方式：信用卡付款 / LINE Pay / ATM 匯款 / PayPal
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                送貨需多久時間？
+              </button>
+            </h2>
+            <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                訂單一般會在 3 個工作天內發貨，而送貨需時 1 至 2 個工作天。
+              </div>
+            </div>
+          </div>
+
+        </div>
+
       </div>
+
 
     </main>
 
