--- a/pages/about.html
+++ b/pages/about.html
@@ -12,37 +12,43 @@
     <%- include('./layout/header'); -%>
 
     <main class="">
+      <!-- 關於羊蹄 -->
       <div class="about-1">
-        <div class="text-primary-50 about-position about-bg-color">
-          <h1 class="heading-header-title mb-24">關於羊蹄</h1>
-          <h5 class="heading-small">About Sheepo Coffee</h5>
+        <div class="container">
+          <div class="row about-bg-color">
+            <div class="col-12 col-md-6 text-primary-50">
+              <h1 class="heading-header-title mb-24">關於羊蹄</h1>
+              <h5 class="heading-small">About Sheepo Coffee</h5>
+            </div>
+          </div>
         </div>
       </div>
 
+      <!-- 品牌故事 -->
       <div class="about-2">
-        <div class="about-position text-primary-950">
-          <div class="d-flex mb-56">
-            <h2 class="heading-xlarge">品牌故事</h2>
-            <p class="about-horizontal"></p>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-primary-950">
+              <div class="d-flex mb-56 align-items-center">
+                <h2 class="heading-xlarge">品牌故事</h2>
+                <p class="about-horizontal"></p>
+              </div>
+              
+              <h3 class="paragraph-medium mb-40">Sheepo Coffee 羊蹄咖啡</h3>
+              <p>取​名源自於​咖​啡豆​的​故事​</p>
+              <p>傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​特別​有​精神</p>
+              <p class="mb-40">走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這正​是​咖啡​漿果。</p>
+              <p>取羊蹄​為名，​就是要強調步步踏實的精神。</p>
+              <p>與獨立尋豆師合作，持續找尋獨具特色的咖啡生豆。</p>
+              <p class="mb-56">從烘焙到沖煮，皆是我們親自生產與測試，為的就是建立品質一致性。</p>
+              <p class="Paragraph/Medium text-primary-500">
+                「我們不想只賣咖啡，我想賣一種值得信賴的味道。」
+              </p>
+            </div>
           </div>
-          <h3 class="paragraph-medium mb-40">Sheepo Coffee 羊蹄咖啡</h3>
-          <p>取​名源自於​咖​啡豆​的​故事​</p>
-          <p>
-            傳說​衣索​比亞​的​高原​上，​有​個牧羊人​看到​自家​的​綿羊​不​知道​為何​特別​有​精神
-          </p>
-          <p class="mb-40">
-            走進​一​看​才​發現​他​們啃食​了​某種​紅色果實，​而​這指​的​正是​咖啡​漿果。​
-          </p>
-          <p>​取羊蹄​為名，​就​是​要​特別​強調步步​踏實​的​精神。​</p>
-          <p>與​獨立尋豆師​合作，​持續​的​找尋​獨具​特色​的​咖啡​生豆。​</p>
-          <p class="mb-56">
-            從​烘焙​到​沖煮，​皆​是​我​們親​自生​產​與​測試，​為​的​就​是​建立​品質​的​一​致性。​
-          </p>
-          <p class="Paragraph/Medium text-primary-500">
-            「我​們​不​想​只​賣​咖啡，​我​想​賣​一​種值得​信賴​的​味道。」​
-          </p>
         </div>
       </div>
+
 
       <!-- service -->
       <div class="container">
