產品頁加入輪播

--- a/pages/products.html
+++ b/pages/products.html
@@ -15,34 +15,36 @@
     <main class="container-xl">
       <h1>線上商店</h1> 
       
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item header1 active">
-            <div class="container my-56">
-              <div class="d-flex align-items-center mb-24">
-                <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
-                <div class="horizontal-line me-16"></div>
-                <span class="heading-xxxlarge text-primary-50 mb-0">全店滿千折百</span>
-              </div>
-              <p class="paragraph-xxlarge mb-4 text-primary-50">現在下單滿 NT$1,000 現折 NT$100</p>
-              <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
-            </div>
+      <div class="products">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
           </div>
-          <div class="carousel-item header2">
-            <div class="container my-56">
-              <div class="d-flex align-items-center mb-24">
-                <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
-                <div class="horizontal-line me-16"></div>
-                <span class="heading-xxxlarge text-primary-50 mb-0">限定濾掛禮盒</span>
+          <div class="carousel-inner">
+            <div class="carousel-item header1 active">
+              <div class="container my-56">
+                <div class="d-flex align-items-center mb-24">
+                  <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
+                  <div class="horizontal-line me-16"></div>
+                  <span class="heading-xxxlarge text-primary-50 mb-0">全店滿千折百</span>
+                </div>
+                <p class="paragraph-xxlarge mb-4 text-primary-50">現在下單滿 NT$1,000 現折 NT$100</p>
+                <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
               </div>
-              <p class="paragraph-xxlarge mb-4 text-primary-50">這個中秋不只賞月，也要賞味</p>
-              <p class="paragraph-xxlarge text-primary-50">送出一份不一樣的團圓滋味！</p>
+            </div>
+            <div class="carousel-item header2">
+              <div class="container my-56">
+                <div class="d-flex align-items-center mb-24">
+                  <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
+                  <div class="horizontal-line me-16"></div>
+                  <span class="heading-xxxlarge text-primary-50 mb-0">限定濾掛禮盒</span>
+                </div>
+                <p class="paragraph-xxlarge mb-4 text-primary-50">這個中秋不只賞月，也要賞味</p>
+                <p class="paragraph-xxlarge text-primary-50">送出一份不一樣的團圓滋味！</p>
+              </div>
             </div>
           </div>
         </div>
