茶會結果一版

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous" fetchpriority="high" />
+  <link rel="preload" href="/assets/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous" fetchpriority="high" />
   <%- include('./layout/style'); -%>
 </head>
 
@@ -227,8 +228,45 @@
 
       <!-- ############################### -->
 
-      
+      <!-- 茶會到了尾聲 -->
+      <section>
+        <div class="content bg4">
 
+          <div class="row flex-md-row-reverse">
+
+            <!-- 右邊 -->
+            <div class="col-12 col-md-6  mb-40">
+              <div class="rounded border bg-white">
+                <img class="rounded p-8 p-md-12" src="/assets/images/explore/explore-cake2-2.png"
+                  alt="衣索比亞 谷吉 郝瑪聯合處理廠" />
+                <p class="fs-4 text-center text-primary-950 p-8 p-md-16">衣索比亞 谷吉 郝瑪聯合處理廠</p>
+              </div>
+            </div>
+
+            <!-- 左邊 -->
+            <div class="col-12 col-md-6">
+              <p class="fs-5 text-center text-primary-50 mb-16 mb-md-40">
+                茶會到了尾聲，感謝您今日蒞臨羊蹄茶會，最後為您獻上最適合的咖啡風味
+              </p>
+              <h2 class="h2 text-primary-50 mb-16 mb-md-40">
+                衣索比亞 谷吉 <br>
+                郝瑪聯合處理廠
+              </h2>
+              <p class="fs-5 text-center text-primary-50 mb-16 mb-md-40">
+                歡迎您填寫線上預約治本點試喝
+              </p>
+              <div class="text-center mb-16 mb-md-40">
+                <button class="btn2">預約試喝</button>
+              </div>
+              <div class="text-center ">
+                <button class="btn3">重新探索</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      
     </main>
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
