--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-Dy3xY7MP.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-0HjRkuJo.css">
+    <script type="module" crossorigin src="/coffee/assets/main-Duq0tn9l.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CuMZuUlo.css">
   </head>
 
 <body>
@@ -104,7 +104,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item header1 active">
-            <div class="container">
+            <div class="container my-56">
               <div class="d-flex align-items-center mb-24">
                 <span class="heading-xxxlarge text-primary-50 mb-0">限時折扣</span>
                 <div class="horizontal-line me-16"></div>
@@ -114,8 +114,16 @@
               <p class="paragraph-xxlarge text-primary-50">把喜歡的風味一次帶回家！</p>
             </div>
           </div>
-          <div class="carousel-item">
-            
+          <div class="carousel-item header2">
+            <div class="container my-56">
+              <div class="d-flex align-items-center mb-24">
+                <span class="heading-xxxlarge text-primary-50 mb-0">中秋節</span>
+                <div class="horizontal-line me-16"></div>
+                <span class="heading-xxxlarge text-primary-50 mb-0">限定濾掛禮盒</span>
+              </div>
+              <p class="paragraph-xxlarge mb-4 text-primary-50">這個中秋不只賞月，也要賞味</p>
+              <p class="paragraph-xxlarge text-primary-50">送出一份不一樣的團圓滋味！</p>
+            </div>
           </div>
         </div>
       </div>
