0907 header use row col

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,12 +13,14 @@
 
     <main class="">
       <!-- 關於羊蹄 -->
-      <div class="about-1">
-        <div class="container">
-          <div class="row about-bg-color">
-            <div class="col-12 col-md-6 text-primary-50">
-              <h1 class="heading-header-title mb-24">關於羊蹄</h1>
-              <h5 class="heading-small">About Sheepo Coffee</h5>
+      <div class="about-1 ">
+        <div class="about-bg-color">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 col-md-3 text-primary-50 mt-140">
+                <h1 class="heading-header-title mb-24">關於羊蹄</h1>
+                <h5 class="heading-small">About Sheepo Coffee</h5>
+              </div>
             </div>
           </div>
         </div>
@@ -29,7 +31,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 text-primary-950">
-              <div class="d-flex mb-56 align-items-center">
+              <div class="d-flex mb-56 align-items-center m-120">
                 <h2 class="heading-xlarge">品牌故事</h2>
                 <p class="about-horizontal"></p>
               </div>
